--- a/app/src/main/res/layout/activity_1.xml
+++ b/app/src/main/res/layout/activity_1.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:text="Операция"
         android:textSize="30sp"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +36,7 @@
         android:layout_marginTop="16dp"
         android:text="Число 1"
         android:textSize="30sp"
-        app:layout_constraintHorizontal_bias=".2"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_1" />
