--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_operation" />
 
     <TextView
-        android:id="@+id/tv_number1"
+        android:id="@+id/edit_text_number1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -49,7 +49,7 @@
         app:layout_constraintHorizontal_bias=".2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_number1" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_number1" />
 
     <Button
         android:id="@+id/button_calculate"
