--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/menu_item1"
+        android:icon="@drawable/ic_hot_tub_black_24dp"
+        android:title="Toast"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_item2"
+        android:icon="@drawable/ic_videogame_asset_black_24dp"
+        android:title="LOG"
+        app:showAsAction="never"/>
 
 </menu>
